--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,17 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+   # - task: Docker@2
+    #  displayName: Build an image
+     # inputs:
+      #  command: build
+       # dockerfile: '$(Build.SourcesDirectory)/complexapp/Dockerfile'
+        #tags: |
+         # $(tag)
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/complexapp/Dockerfile'
+        containerRegistry: 'docker'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
         tags: |
           $(tag)
