Update azure-pipelines-3.yml for Azure Pipelines

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -23,6 +23,7 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
+        buildContext: $(Build.Repository.LocalPath)
         command: build
         dockerfile: '$(Build.SourcesDirectory)/complexapp/complexapp/dockerfile'
         tags: |
