--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -23,7 +23,7 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        buildContext: $(Build.Repository.LocalPath)
+        buildContext: $$(Build.SourcesDirectory)/complexapp/complexapp
         command: build
         dockerfile: '$(Build.SourcesDirectory)/complexapp/complexapp/dockerfile'
         tags: |
