--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,7 +18,10 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: ubuntu-latest
+      name: Default
+      demands: 
+      - Agent.Name -equals selfhostedagent
+
     steps:
     - task: Docker@2
       displayName: Build an image
