--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,17 +23,12 @@ stages:
       - Agent.Name -equals selfhostedagent
 
     steps:
-   # - task: Docker@2
-    #  displayName: Build an image
-     # inputs:
-      #  command: build
-       # dockerfile: '$(Build.SourcesDirectory)/complexapp/Dockerfile'
-        #tags: |
-         # $(tag)
     - task: Docker@2
+      displayName: Build an image
       inputs:
-        containerRegistry: 'docker'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/complexapp'
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/complexapp/Dockerfile'
         tags: |
-          $(tag)
+         $(tag)
+    
