--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,9 +28,9 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        buildContext: '$(Build.SourcesDirectory)/complexapp'
+       # buildContext: '$(Build.SourcesDirectory)/complexapp'
         command: build
-        dockerfile: '$(Build.SourcesDirectory)/complexapp/dockerfile'
+        dockerfile: '**/dockerfile'
         tags: |
          $(tag)
     
