Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,8 @@ stages:
     steps:
       - task: Docker@2
         inputs:
-
-         command: 'build'
-         Dockerfile: '**/dockerfile'
-         buildContext: '$(Build.SourcesDirectory)'
+          buildContext: '$(Build.SourcesDirectory)/aspnetapp'
+          command: 'build'
+          Dockerfile: '**/dockerfile'
+          #buildContext: '$(Build.SourcesDirectory)'
         
