Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,6 @@ stages:
         inputs:
           buildContext: '$(Build.SourcesDirectory)/dotnetapp'
           command: 'build'
-          Dockerfile: '**/dockerfile'
+          Dockerfile: '**/Dockerfile'
           #buildContext: '$(Build.SourcesDirectory)'
         
