--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,8 @@ stages:
     steps:
       - task: Docker@2
         inputs:
-          buildContext: '$(Build.SourcesDirectory)/complexapp'
+         # buildContext: '$(Build.SourcesDirectory)/complexapp'
           command: 'build'
           Dockerfile: '**/dockerfile'
-          #buildContext: '$(Build.SourcesDirectory)'
+          buildContext: '$(Build.SourcesDirectory)'
         
