Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
     steps:
       - task: Docker@2
         inputs:
-         # buildContext: '$(Build.SourcesDirectory)/complexapp'
+          buildContext: '$(Build.SourcesDirectory)/complexapp'
           command: 'build'
           Dockerfile: '**/dockerfile'
           #buildContext: '$(Build.SourcesDirectory)'
