Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,11 @@ stages:
      - task: Bash@3
        inputs:
         targetType: 'inline'
-        script: 'pwd'
+        script: | 
+         pwd
+         ls -l
+         env | grep DOCKER*
+
      - task: Docker@2
        inputs:
           buildContext: '$(Build.SourcesDirectory)/complexapp'
