--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,4 +41,10 @@ stages:
           command: 'build'
           Dockerfile: '**/dockerfile'
           #buildContext: '$(Build.SourcesDirectory)'
+     
+     - task: PublishBuildArtifacts@1
+       inputs:
+         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+         ArtifactName: 'drop'
+         publishLocation: 'Container'
         
